// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrIcon renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!-- &lt;use
      v-if="use"
      :href="use"
      :xlinkHref="use"
    /&gt; -->
</svg>
`;

exports[`CdrIcon renders correctly for single icon component 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  
  <path
    d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
    role="presentation"
  />
  
  <!-- &lt;use
      v-if="use"
      :href="use"
      :xlinkHref="use"
    /&gt; -->
</svg>
`;
